k8sIngressBusyBoxFrontEnd-avi.com.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: ingress.avi.com
      http:
        paths:
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: web-front-1
                port:
                  number: 80
          - pathType: Prefix
            path: "/v2"
            backend:
              service:
                name: web-front-2
                port:
                  number: 80
          - pathType: Prefix
            path: "/v3"
            backend:
              service:
                name: web-front-3
                port:
                  number: 80
